--- a/volume1/docker/docker_run/umbrel/lnd/lnd.conf
+++ b/volume1/docker/docker_run/umbrel/lnd/lnd.conf
@@ -387,7 +387,7 @@ bitcoin.mainnet=true
 ; bitcoin.testnet=true
 ;
 ; Use Bitcoin's simulation test network
-bitcoin.simnet=true
+; bitcoin.simnet=true
 
 ; Use Bitcoin's regression test network
 ; bitcoin.regtest=false
