--- a/volume1/docker/docker_run/umbrel/.env
+++ b/volume1/docker/docker_run/umbrel/.env
@@ -14,7 +14,7 @@ BITCOIN_P2P_PORT="8333"
 BITCOIN_ZMQ_RAWBLOCK_PORT="28332"
 BITCOIN_ZMQ_RAWTX_PORT="28333"
 BITCOIN_ZMQ_HASHBLOCK_PORT="28334"
-BITCOIN_RPC_USER=<username>
+BITCOIN_RPC_USER=umbrel
 BITCOIN_RPC_PASS=<password>
 BITCOIN_RPC_AUTH=<rpcauth>
 LND_IP="10.21.21.9"
