--- a/volume1/docker/docker_run/umbrel/lnd/lnd.conf
+++ b/volume1/docker/docker_run/umbrel/lnd/lnd.conf
@@ -41,7 +41,7 @@ tlskeypath=/data/.lnd/tls.key
 
 ; Adds an extra ip to the generated certificate. Setting multiple tlsextraip= entries is allowed.
 ; (old tls files must be deleted if changed)
-; tlsextraip=10.21.21.9
+tlsextraip=10.21.21.9
 
 ; Adds an extra domain to the generate certificate. Setting multiple tlsextradomain= entries is allowed.
 ; (old tls files must be deleted if changed)
@@ -50,11 +50,11 @@ tlskeypath=/data/.lnd/tls.key
 ; If set, then all certs will automatically be refreshed if they're close to
 ; expiring, or if any parameters related to extra IPs or domains in the cert
 ; change.
-; tlsautorefresh=true
+tlsautorefresh=true
 
 ; Do not include the interface IPs or the system hostname in TLS certificate,
 ; use first --tlsextradomain as Common Name instead, if set.
-; tlsdisableautofill=true
+tlsdisableautofill=true
 
 ; A list of domains for lnd to periodically resolve, and advertise the resolved
 ; IPs for the backing node. This is useful for users that only have a dynamic IP,
