--- a/volume1/docker/docker_run/umbrel/.env
+++ b/volume1/docker/docker_run/umbrel/.env
@@ -1,4 +1,10 @@
-#
+# Host
+DEVICE_IP=<ip>
+DEVICE_HOSTNAME=<hostname>
+DEVICE_HOSTS=<hosts>
+DOCKER_BINARY=<path>
+
+# Umbrel
 SYSLOG_IP="10.21.21.214"
 NETWORK_IP="10.21.21.0"
 GATEWAY_IP="10.21.21.1"
@@ -27,7 +33,6 @@ TOR_PROXY_IP="10.21.21.11"
 TOR_PROXY_PORT="9050"
 TOR_PASSWORD=<password>
 TOR_HASHED_PASSWORD=<password>
-DOCKER_BINARY=/usr/local/bin/docker
 
 # Apps
 APP_BTC_RPC_EXPLORER_IP="10.21.21.12"
