--- a/docker/docker-compose/guacamole/docker-compose.yml
+++ b/docker/docker-compose/guacamole/docker-compose.yml
@@ -39,7 +39,7 @@ services:
             - 2001:4860:4860::8844
         environment:
             GUACD_HOSTNAME: guacamole-guacd
-            MYSQL_HOSTNAME: mariadb10
+            MYSQL_HOSTNAME: mariadb
             MYSQL_DATABASE: guacamole
             MYSQL_USER: guacamole
             MYSQL_PASSWORD: '<MYSQL_PASSWORD>'
