docker-compose/watchtower

--- a/docker/docker-compose/watchtower/docker-compose.yml
+++ b/docker/docker-compose/watchtower/docker-compose.yml
@@ -19,6 +19,8 @@ services:
             TZ: 'Europe/Berlin'
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
+        labels:
+            com.centurylinklabs.watchtower.enable: "false"
 
 networks:
     watchtower:
