--- a/etc/nginx/conf.d/http.matrix.conf
+++ b/etc/nginx/conf.d/http.matrix.conf
@@ -1,7 +1,7 @@
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name matrix.yourdomain.synology.me;
+    server_name matrix.3x3cut0r.synology.me;
     ssl_certificate /usr/syno/etc/certificate/system/default/ECC-fullchain.pem;
     ssl_certificate_key /usr/syno/etc/certificate/system/default/ECC-privkey.pem;
 	add_header Strict-Transport-Security "max-age=15768000; includeSubdomains; preload" always;
@@ -39,13 +39,13 @@ server {
     }
 
     location /.well-known/matrix/client {
-        return 200 '{"m.homeserver": {"base_url": "https://matrix.yourdomain.synology.me:443"}}';
+        return 200 '{"m.homeserver": {"base_url": "https://matrix.3x3cut0r.synology.me:443"}}';
         add_header Content-Type application/json;
         add_header Access-Control-Allow-Origin *;
     }
 
     location /.well-known/matrix/server {
-        return 200 '{"m.server": "matrix.yourdomain.synology.me:443"}';
+        return 200 '{"m.server": "matrix.3x3cut0r.synology.me:443"}';
         add_header Content-Type application/json;
         add_header Access-Control-Allow-Origin *;
     }
@@ -65,4 +65,5 @@ server {
         rewrite (.*) /error.html break;
         allow all;
     }
+
 }
